--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -127,6 +127,14 @@ jobs:
 
 
 
+    - uses: oprypin/find-latest-tag@v1
+      with:
+        repository: octokit/rest.js  # The repository to scan.
+        releases-only: true  # We know that all relevant tags have a GitHub release for them.
+      id: octokit  # The step ID to refer to later.
+    - run: echo "Octokit is at version ${{ steps.octokit.outputs.tag }}"
+
+
 
     - uses: actions/checkout@v2
     - id: read-version
