--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -127,10 +127,16 @@ jobs:
 
 
 
-    - name: GitHub Tag Name example
-      run: |
-         echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
-         echo "Tag name from github.ref_name: ${{  github.ref_name }}"
+    
+    
+    - uses: olegtarasov/get-tag@v2.1.2
+      id: tagName
+      with:
+        tagRegex: "(?<package>.*)-(?<version>.*)" 
+    - name: Some other step # Output usage example
+      with:
+        dirname: ${{ steps.tagName.outputs.package }}
+        tagname: ${{ steps.tagName.outputs.version }}
 
 
 
