--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -114,30 +114,10 @@ jobs:
 
 
 
-    - uses: actions/checkout@v1
-    - name: Set output
-      id: vars
-      run: echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
-    - name: Check output
-      env:
-        RELEASE_VERSION: ${{ steps.vars.outputs.GIT_TAG }}
+    - name: GitHub Tag Name example
       run: |
-          echo $RELEASE_VERSION
-          echo ${{ steps.vars.outputs.GIT_TAG }}
-
-
-
-    
-    
-    - name: Set output
-      id: vars1
-      run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-    - name: Check output
-      env:
-          RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
-      run: |
-          echo $RELEASE_VERSION
-          echo ${{ steps.vars.outputs.tag }}
+        echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+        echo "Tag name from github.ref_name: ${{  github.ref_name }}"
     
     
     
