--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -131,12 +131,14 @@ jobs:
         limit: -1
 
     - name: GitHub Tag Name example
+      env:
+          NUMBER: ${{ steps.split.outputs._1 }}
       id: test
       run: |
         echo "Tag name from GITHUB_REF_NAME: $GITHUB_HEAD_REF"
         echo "Tag name from github.ref_name: ${{  steps.previoustag.outputs.tag }}"
         echo "Tag name from github.ref_name: ${{  steps.split.outputs._0 }}"
-        echo ::set-env name=GIT_TAG::$(($steps.split.outputs._1+1))
+        echo ::set-env name=GIT_TAG::$(($NUMBER+1))
     
     
    
