--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -141,7 +141,12 @@ jobs:
     
     
    
-
+    - name: run number with offset
+      env:
+         NUM: ${{ github.run_number }}
+      run: |
+         echo ::set-env name=GITHUB_RUN_NUMBER_WITH_OFFSET::$(($NUM+200))
+    - run: echo $GITHUB_RUN_NUMBER_WITH_OFFSET
 
 
 
