--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -145,6 +145,7 @@ jobs:
       env:
          NUM: ${{ github.run_number }}
       run: |
+         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
          echo ::set-env name=GITHUB_RUN_NUMBER_WITH_OFFSET::$(($NUM+200))
     - run: echo $GITHUB_RUN_NUMBER_WITH_OFFSET
 
